// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly Desktop 1`] = `
<div
  className="mainWrapperGame"
>
  <div
    className="Game-containerGame-1"
  >
    <header
      className="Game-headerGame-2"
    >
      <div
        className="Game-gameHeaderMain-3"
      >
        <ul
          className="MenuNavigationGame-root-8 dark"
        >
          <li>
            <div
              className="MenuNavigationGame-logout-17"
              onClick={[Function]}
            >
              Logout
            </div>
          </li>
          <li>
            <a
              className="MenuNavigationGame-headerMenuItem-9"
              href="/"
              onClick={[Function]}
            >
              <i
                className="MenuNavigationGame-menuIcon-10 MenuNavigationGame-dashboard-11"
              />
              <br />
               Dashboard
            </a>
          </li>
          <li>
            <a
              className="MenuNavigationGame-headerMenuItem-9"
              href="/"
              onClick={[Function]}
            >
              <i
                className="MenuNavigationGame-menuIcon-10 MenuNavigationGame-walletIcon-12"
              />
              <br />
               Wallet
            </a>
          </li>
          <li>
            <a
              className="MenuNavigationGame-headerMenuItem-9"
              href="/"
              onClick={[Function]}
            >
              <i
                className="MenuNavigationGame-menuIcon-10 MenuNavigationGame-shop-13"
              />
              <br />
               Shop
            </a>
          </li>
          <li>
            <a
              className="MenuNavigationGame-headerMenuItem-9"
              href="/games"
              onClick={[Function]}
            >
              <i
                className="MenuNavigationGame-menuIcon-10 MenuNavigationGame-games-14"
              />
              <br />
               Games
            </a>
          </li>
          <li>
            <a
              className="MenuNavigationGame-headerMenuItem-9"
              href="/"
              onClick={[Function]}
            >
              <i
                className="MenuNavigationGame-menuIcon-10 MenuNavigationGame-friends-15"
              />
              <br />
               Friends
            </a>
          </li>
          <li>
            <a
              className="MenuNavigationGame-headerMenuItem-9"
              href="/"
              onClick={[Function]}
            >
              <i
                className="MenuNavigationGame-menuIcon-10 MenuNavigationGame-settings-16"
              />
              <br />
               Settings
            </a>
          </li>
        </ul>
      </div>
    </header>
    <main
      className="Game-gameMain-4"
    >
      <div
        className="GameCounter-root-18"
      >
        <div
          className="GameCounter-counterWins-23"
        >
          <p
            className="GameCounter-counterBiggestWin-24"
          >
            <span
              className="GameCounter-counterValue-28"
            >
              4666.78 dcb
            </span>
             
            <br />
             BIGGEST WIN 
            <br />
             FOR ALL TIME
          </p>
        </div>
        <div
          className="GameCounter-counterHours-19"
        >
          <p
            className="GameCounter-counterHoursVolume-25"
          >
            <span
              className="GameCounter-counterValue-28"
            >
              167.12 dcb
            </span>
             
            <br />
             VOLUME OF 
            <br />
            24 HOURS
          </p>
        </div>
        <div
          className="GameCounter-counterUsers-20"
        >
          <p
            className="GameCounter-counterUsersVolume-21"
          >
            <span
              className="GameCounter-counterValue-28"
            >
              785
            </span>
             
            <br />
             USERS FOR 
            <br />
            LAST 24 HOURS
          </p>
        </div>
        <div
          className="GameCounter-counterContracts-22"
        >
          <p
            className="GameCounter-counterContractsVolume-26"
          >
            <span
              className="GameCounter-counterValue-28"
            >
              20243.12 dcb
            </span>
             
            <br />
             ALL VOLUME OF 
            <br />
             SMART CONTRACT
          </p>
          <br />
          <a
            className="GameCounter-counterContractsLink-27"
            href="/"
            onClick={[Function]}
          >
            0x7fdcd2a1e52f10c28cb7732f46393e297ecadda1
          </a>
        </div>
      </div>
      <div
        className="GameComments-root-29"
      >
        <div
          className="GameComments-commentItem-30 GameComments-comment1-31"
        >
          <a
            className="GameComments-commentUser-32"
            href="/"
            onClick={[Function]}
          >
            <img
              alt=""
              className="GameComments-commentUserPhoto-33"
              src="UserImg"
            />
          </a>
          <div
            className="GameComments-commentTitle-34"
          >
            <span
              className="GameComments-commentTitleText-35"
            >
              Ben F.
               says:
            </span>
            <time
              className="GameComments-commentDate-36"
              dateTime="2018-05-22 13:30"
            >
              22 May 2018 12:03
            </time>
          </div>
          <p>
            Curabitur tincidunt orci quis odio aliquet placerat. Nullam laoreet justo eros, quis semper turpis gravida eget. Ut ullamcorper nibho a massa tincidunt malesuada. In nunc velit basank. s semper turpis gravida eget. Ut ullamcorper nibho a massa tincidunt malesuada. In nunc velit basank.
          </p>
          <a
            className="GameComments-commentLike-38"
            href="/"
            onClick={[Function]}
          >
             
            <span
              className="GameComments-likeValue-39"
            >
              5
            </span>
             Like
          </a>
          <a
            className="GameComments-subComment-37"
            href="/"
            onClick={[Function]}
          >
            <span
              className="GameComments-commentValue-40"
            >
              7
            </span>
             Comment
          </a>
        </div>
        <div
          className="GameComments-commentItem-30 GameComments-comment2-41"
        >
          <a
            className="GameComments-commentUser-32"
            href="/"
            onClick={[Function]}
          >
            <img
              alt=""
              className="GameComments-commentUserPhoto-33"
              src="UserImg"
            />
          </a>
          <div
            className="GameComments-commentTitle-34"
          >
            <span
              className="GameComments-commentTitleText-35"
            >
              Thomas D.
               says:
            </span>
            <time
              className="GameComments-commentDate-36"
              dateTime="2018-05-22 13:30"
            >
              22 May 2018 12:03
            </time>
          </div>
          <p>
            Nulla non pellentesque sem, sed aliquet justo. Praesent egestas purus et bibendum tempus.Interdum et malesuada fames ac ante ipsum primis in faucibus.
          </p>
          <a
            className="GameComments-commentLike-38"
            href="/"
            onClick={[Function]}
          >
             
            <span
              className="GameComments-likeValue-39"
            >
              5
            </span>
             Like
          </a>
          <a
            className="GameComments-subComment-37"
            href="/"
            onClick={[Function]}
          >
            <span
              className="GameComments-commentValue-40"
            >
              7
            </span>
             Comment
          </a>
        </div>
      </div>
    </main>
    <footer
      className="Footer-root-43"
    >
      <ul
        className="Footer-footerNav-44"
      >
        <li>
          <a
            className="Footer-footerNavItem-45"
            href="/"
            onClick={[Function]}
          >
            Dashboard
          </a>
        </li>
        <li>
          <a
            className="Footer-footerNavItem-45"
            href="/"
            onClick={[Function]}
          >
            Wallet
          </a>
        </li>
        <li>
          <a
            className="Footer-footerNavItem-45"
            href="/"
            onClick={[Function]}
          >
            Shop
          </a>
        </li>
        <li>
          <a
            className="Footer-footerNavItem-45"
            href="/games"
            onClick={[Function]}
          >
            Games
          </a>
        </li>
        <li>
          <a
            className="Footer-footerNavItem-45"
            href="/"
            onClick={[Function]}
          >
            Friends
          </a>
        </li>
        <li>
          <a
            className="Footer-footerNavItem-45"
            href="/"
            onClick={[Function]}
          >
            Settings
          </a>
        </li>
      </ul>
      <span>
        Vault. All Rights Reserved 2018
      </span>
    </footer>
  </div>
</div>
`;

exports[`renders correctly Mobile 1`] = `
<div
  className="mainWrapperGame"
>
  <div
    className="Game-containerGame-1"
  >
    <header
      className="Game-headerGame-2"
    >
      <div
        className="Game-gameHeaderMain-3"
      >
        <ul
          className="MenuNavigationGame-root-8 dark"
        >
          <li>
            <div
              className="MenuNavigationGame-logout-17"
              onClick={[Function]}
            >
              Logout
            </div>
          </li>
          <li>
            <a
              className="MenuNavigationGame-headerMenuItem-9"
              href="/"
              onClick={[Function]}
            >
              <i
                className="MenuNavigationGame-menuIcon-10 MenuNavigationGame-dashboard-11"
              />
              <br />
               Dashboard
            </a>
          </li>
          <li>
            <a
              className="MenuNavigationGame-headerMenuItem-9"
              href="/"
              onClick={[Function]}
            >
              <i
                className="MenuNavigationGame-menuIcon-10 MenuNavigationGame-walletIcon-12"
              />
              <br />
               Wallet
            </a>
          </li>
          <li>
            <a
              className="MenuNavigationGame-headerMenuItem-9"
              href="/"
              onClick={[Function]}
            >
              <i
                className="MenuNavigationGame-menuIcon-10 MenuNavigationGame-shop-13"
              />
              <br />
               Shop
            </a>
          </li>
          <li>
            <a
              className="MenuNavigationGame-headerMenuItem-9"
              href="/games"
              onClick={[Function]}
            >
              <i
                className="MenuNavigationGame-menuIcon-10 MenuNavigationGame-games-14"
              />
              <br />
               Games
            </a>
          </li>
          <li>
            <a
              className="MenuNavigationGame-headerMenuItem-9"
              href="/"
              onClick={[Function]}
            >
              <i
                className="MenuNavigationGame-menuIcon-10 MenuNavigationGame-friends-15"
              />
              <br />
               Friends
            </a>
          </li>
          <li>
            <a
              className="MenuNavigationGame-headerMenuItem-9"
              href="/"
              onClick={[Function]}
            >
              <i
                className="MenuNavigationGame-menuIcon-10 MenuNavigationGame-settings-16"
              />
              <br />
               Settings
            </a>
          </li>
        </ul>
        <div
          className="RollTopDesktop-root-46"
        >
          <div
            className="RollTopDesktop-gameRollImg-47"
          >
            <img
              alt=""
              src="image"
            />
          </div>
          <div
            className="RollTopDesktop-gameRollInf-48"
          >
            <div
              className="HeaderGame-root-67"
            >
              <div
                className="HeaderGame-gameUserBlock-68"
              >
                <p
                  className="HeaderGame-gameUserHello-69"
                >
                  Hello, Ben A 
                  <br />
                  <a
                    className="HeaderGame-gameUserVerification-70"
                    href="/"
                    onClick={[Function]}
                  >
                    KYC VERIFICATION
                  </a>
                </p>
                <div
                  className="HeaderGame-gameUserPhoto-71"
                >
                  <img
                    alt=""
                    src="user.jpg"
                  />
                </div>
              </div>
            </div>
            <div
              className="RollTopDesktop-gameRollNext-49"
            >
              <p>
                next roll in:
                 
                <span
                  className="RollTopDesktop-gameRollNextCounter-50"
                >
                  00:00:23.12
                </span>
              </p>
            </div>
            <div
              className="RollTopDesktop-gameRollDescr-51"
            >
              <div
                className="RollTopDesktop-gameRollDescrleft-52"
              >
                <div
                  className="RollTopDesktop-gameRollTitleBlock-53"
                >
                  <p
                    className="RollTopDesktop-gameRollTitle-54"
                  >
                    4Clover
                  </p>
                  <span
                    className="RollTopDesktop-gameRollOnline-55"
                  >
                    online: 234
                  </span>
                  <br />
                  <span
                    className="RollTopDesktop-gameRollCompany-56"
                  >
                    by Fall Inc.
                  </span>
                </div>
                <div
                  className="RollTopDesktop-gameRollText-57"
                >
                  <p>
                    Integer tempor semper sapien sit amet bibendum. Etiam ornare teInteger tempor semper sapien sit amet bibendum. Etiam ornare te et bibendum. Etiam ornare te
                  </p>
                </div>
                <div
                  className="RollTopDesktop-gameRollTags-58"
                >
                  <p>
                    #ROLLED #BESTCRYPTO #ETH 
                  </p>
                </div>
              </div>
              <div
                className="RollTopDesktop-gameRollRating-59"
              >
                <p
                  className="RollTopDesktop-ratingValue-60"
                >
                  <span
                    className="RollTopDesktop-ratingValueNum-61"
                  >
                    6.5
                  </span>
                  <span
                    className="RollTopDesktop-ratingValueFull-62"
                  >
                    /7
                  </span>
                </p>
                <div
                  className="RollTopDesktop-ratingStars-63"
                >
                  <div
                    className="RollTopDesktop-fullStars-64"
                  />
                  <div
                    className="RollTopDesktop-halfStars-65"
                  />
                </div>
                <span
                  className="RollTopDesktop-ratingCategory-66"
                >
                  DICE CATEGORY
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          className="RollBottomDesktop-root-72"
        >
          <div
            className="RollBottomDesktop-gameRollActions-73"
          >
            <div
              className="RollBottomDesktop-playNowBtn-74"
              onClick={[Function]}
            >
              Play Now
            </div>
            <a
              className="RollBottomDesktop-addBtn-75"
              href="/"
              onClick={[Function]}
            >
              Add to favorites
            </a>
          </div>
          <div
            className="RollBottomDesktop-gameRollSlider-76"
            id="scrollSlider"
            tabIndex="5000"
          >
            <a
              className="RollBottomDesktop-sliderItem-77"
              href="/"
              onClick={[Function]}
            >
              <img
                alt=""
                className="RollBottomDesktop-sliderItemPhoto-78"
              />
            </a>
            <a
              className="RollBottomDesktop-sliderItem-77"
              href="/"
              onClick={[Function]}
            >
              <img
                alt=""
                className="RollBottomDesktop-sliderItemPhoto-78"
              />
            </a>
          </div>
        </div>
      </div>
    </header>
    <main
      className="Game-gameMain-4"
    >
      <div
        className="GameCounter-root-18"
      >
        <div
          className="GameCounter-counterWins-23"
        >
          <p
            className="GameCounter-counterBiggestWin-24"
          >
            <span
              className="GameCounter-counterValue-28"
            >
              4666.78 dcb
            </span>
             
            <br />
             BIGGEST WIN 
            <br />
             FOR ALL TIME
          </p>
        </div>
        <div
          className="GameCounter-counterHours-19"
        >
          <p
            className="GameCounter-counterHoursVolume-25"
          >
            <span
              className="GameCounter-counterValue-28"
            >
              167.12 dcb
            </span>
             
            <br />
             VOLUME OF 
            <br />
            24 HOURS
          </p>
        </div>
        <div
          className="GameCounter-counterUsers-20"
        >
          <p
            className="GameCounter-counterUsersVolume-21"
          >
            <span
              className="GameCounter-counterValue-28"
            >
              785
            </span>
             
            <br />
             USERS FOR 
            <br />
            LAST 24 HOURS
          </p>
        </div>
        <div
          className="GameCounter-counterContracts-22"
        >
          <p
            className="GameCounter-counterContractsVolume-26"
          >
            <span
              className="GameCounter-counterValue-28"
            >
              20243.12 dcb
            </span>
             
            <br />
             ALL VOLUME OF 
            <br />
             SMART CONTRACT
          </p>
          <br />
          <a
            className="GameCounter-counterContractsLink-27"
            href="/"
            onClick={[Function]}
          >
            0x7fdcd2a1e52f10c28cb7732f46393e297ecadda1
          </a>
        </div>
      </div>
      <div
        className="GameComments-root-29"
      >
        <div
          className="GameComments-commentItem-30 GameComments-comment1-31"
        >
          <a
            className="GameComments-commentUser-32"
            href="/"
            onClick={[Function]}
          >
            <img
              alt=""
              className="GameComments-commentUserPhoto-33"
              src="UserImg"
            />
          </a>
          <div
            className="GameComments-commentTitle-34"
          >
            <span
              className="GameComments-commentTitleText-35"
            >
              Ben F.
               says:
            </span>
            <time
              className="GameComments-commentDate-36"
              dateTime="2018-05-22 13:30"
            >
              22 May 2018 12:03
            </time>
          </div>
          <p>
            Curabitur tincidunt orci quis odio aliquet placerat. Nullam laoreet justo eros, quis semper turpis gravida eget. Ut ullamcorper nibho a massa tincidunt malesuada. In nunc velit basank. s semper turpis gravida eget. Ut ullamcorper nibho a massa tincidunt malesuada. In nunc velit basank.
          </p>
          <a
            className="GameComments-commentLike-38"
            href="/"
            onClick={[Function]}
          >
             
            <span
              className="GameComments-likeValue-39"
            >
              5
            </span>
             Like
          </a>
          <a
            className="GameComments-subComment-37"
            href="/"
            onClick={[Function]}
          >
            <span
              className="GameComments-commentValue-40"
            >
              7
            </span>
             Comment
          </a>
        </div>
        <div
          className="GameComments-commentItem-30 GameComments-comment2-41"
        >
          <a
            className="GameComments-commentUser-32"
            href="/"
            onClick={[Function]}
          >
            <img
              alt=""
              className="GameComments-commentUserPhoto-33"
              src="UserImg"
            />
          </a>
          <div
            className="GameComments-commentTitle-34"
          >
            <span
              className="GameComments-commentTitleText-35"
            >
              Thomas D.
               says:
            </span>
            <time
              className="GameComments-commentDate-36"
              dateTime="2018-05-22 13:30"
            >
              22 May 2018 12:03
            </time>
          </div>
          <p>
            Nulla non pellentesque sem, sed aliquet justo. Praesent egestas purus et bibendum tempus.Interdum et malesuada fames ac ante ipsum primis in faucibus.
          </p>
          <a
            className="GameComments-commentLike-38"
            href="/"
            onClick={[Function]}
          >
             
            <span
              className="GameComments-likeValue-39"
            >
              5
            </span>
             Like
          </a>
          <a
            className="GameComments-subComment-37"
            href="/"
            onClick={[Function]}
          >
            <span
              className="GameComments-commentValue-40"
            >
              7
            </span>
             Comment
          </a>
        </div>
      </div>
    </main>
    <footer
      className="Footer-root-43"
    >
      <ul
        className="Footer-footerNav-44"
      >
        <li>
          <a
            className="Footer-footerNavItem-45"
            href="/"
            onClick={[Function]}
          >
            Dashboard
          </a>
        </li>
        <li>
          <a
            className="Footer-footerNavItem-45"
            href="/"
            onClick={[Function]}
          >
            Wallet
          </a>
        </li>
        <li>
          <a
            className="Footer-footerNavItem-45"
            href="/"
            onClick={[Function]}
          >
            Shop
          </a>
        </li>
        <li>
          <a
            className="Footer-footerNavItem-45"
            href="/games"
            onClick={[Function]}
          >
            Games
          </a>
        </li>
        <li>
          <a
            className="Footer-footerNavItem-45"
            href="/"
            onClick={[Function]}
          >
            Friends
          </a>
        </li>
        <li>
          <a
            className="Footer-footerNavItem-45"
            href="/"
            onClick={[Function]}
          >
            Settings
          </a>
        </li>
      </ul>
      <span>
        Vault. All Rights Reserved 2018
      </span>
    </footer>
  </div>
</div>
`;
